syntax = "proto3";

package config;

message CuratorConfig {
  string photo_queue_bucket = 1;
  string photo_storage_bucket = 2;
  string photo_info_bucket = 3;

  repeated CameraModels camera_models = 4;
  repeated string valid_labels = 5;
}

message CameraModels {
  string exif_model = 1;
  string abbreviation = 2;
}
