syntax = "proto3";

package mediainfo;

// This represents a single image. It may contain a set of different files for
// example (.jpg, .raw, .mp4, etc) that have different resolutions or image
// quality for the same image.
message Media {
  // Metadata for the image.
  PhotoInfo photo = 3;

  // The list of files that represent this image.
  repeated FileInfo file = 4;

  // Normalized name - This is constructed from the image metadata.
  string name = 5;

  // Allows us to tag images so we can easily sort and organize.
  repeated string tags = 7;
}

// Information about the original media capture, this information shouldn't
// change.
message PhotoInfo {
  int64 timestamp_seconds = 1;
  string datetime = 10;
  string make = 2;
  string model = 3;
  Fraction aperture = 4;
  Fraction exposure_time = 5;
  Fraction focal_length = 6;
  int32 iso = 7;
  int32 width = 8; // May not be the same for all files in this Media
  int32 height = 9; // May not be the same for all files in this Media
}

enum FileType {
  JPG = 0;
  RAW = 1;
}

message FileInfo {
  string filename = 1;
  FileType type = 2;
  bytes md5sum = 3;
  bytes sha256sum = 4;
  int64 size_in_bytes = 5;
}

message Fraction {
  int32 numerator = 1;
  int32 denominator = 2;
}
